[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/autoloads/Signaling.gd" type="Script" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/prompt_background.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/PromptCenter:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 0 ) ]
}

[node name="Signaling" type="Node"]
script = ExtResource( 1 )

[node name="FailureCheckTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="PromptAnimation" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PromptCenter" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 720.0
margin_bottom = 720.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PromptCenter"]
margin_left = 440.0
margin_top = 310.0
margin_right = 840.0
margin_bottom = 410.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/PromptCenter/MarginContainer"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PromptCenter/MarginContainer"]
margin_right = 400.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PromptCenter/MarginContainer/CenterContainer"]
margin_left = 27.0
margin_right = 372.0
margin_bottom = 100.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PromptCenter/MarginContainer/CenterContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 325.0
margin_bottom = 80.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="CanvasLayer/PromptCenter/MarginContainer/CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 305.0
margin_bottom = 24.0
text = "Connecting to server..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCenter" type="CenterContainer" parent="CanvasLayer/PromptCenter/MarginContainer/CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 305.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/PromptCenter/MarginContainer/CenterContainer/MarginContainer/VBoxContainer/ButtonCenter"]
margin_left = 75.0
margin_right = 229.0
margin_bottom = 26.0
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/PromptCenter/MarginContainer/CenterContainer/MarginContainer/VBoxContainer/ButtonCenter/Button" to="." method="prompt_disconnect_pressed"]
